# alpha-zero-g

./: .gitattributes  .gitignore  AGENTS.md  ALPHA-ZERO-G-RESEARCH.md  CONTEXT.md  GEMINI.md  LICENSE  Progress.md  README.md  ROADMAP.md  alpha-zero-g-guide-v2.md  azg  create-project.sh  features.json  init.sh  progress.md  pyproject.toml  setup-global-harness.sh  setup-harness.sh  statusline_debug.json  task.md  upgrade-project.sh
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  hooks.json
.agents/hooks/: auto-lint.sh  block-destructive-ops.sh  checkpoint.sh  commit-gate.sh  spawn-budget.sh
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  handoff.md  progress.md
.agents/rules/: gotchas.md  python-r-rules.md  safety.md  workflows.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_explorer_explore_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_reviewer_verify_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md  review.md
.agents/teamwork_preview_worker_translate_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/victory_auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md
.antigravitycli/: b287e0aa-8757-4fec-af15-37aeac1ddd4f.json
.cursor/rules/: read-agents-md.md
.github/workflows/: ci.yml
docs/: AGENT-ONBOARDING.md  ALPHA-ZERO-G-V3-PLAN.md  DATA_DICT.md  MODEL_NOTES.md  REVAMP-SPEC.md  agent-architecture.md  antigravity-agent-architecture.md  architecture.md  beliefs.md  handoff.md  quality.md
docs/adr/: 0000-adr-template.md  0001-adaptive-single-line-statusline.md  0002-safety-hook-hard-denial.md  0003-v4-harness-only-pivot.md  0004-repo-native-reliability-boundary.md  0005-evidence-gated-fable-adoption.md  0006-spawn-budget-pretooluse.md  ADR-001-alpha-zero-g-upgrade.md  ADR-002-alpha-zero-g-upgrade.md
docs/agents/: CONTEXT.md.tmpl  current-state.md  host-contract-smoke.md  issue-tracker.md  progress.md
evals/: README.md  analyze-pilot-gate.sh  analyze-pilot-log.sh  compare-core-fable.sh  judge-score.sh  prepare-judge-packet.sh  record-pilot-pair.sh  record-scorecard.sh  run-compare-smoke.sh  run-exploratory-smoke.sh  run-long-horizon.sh  run-pair.sh  scorecard.json.tmpl  suite.json
global/: .gitignore  AGENTS.md  GEMINI.md  settings.json  settings.json.example  statusline.sh
lib/: apply-overlay.sh  apply.sh  common.sh  fable.sh  scaffold.sh  setup.sh  uninstall.sh  update.sh  vendor-sync.sh
scratch/: debug_test.py
scripts/: scaffold-project.ps1  scaffold-project.sh  scaffold.py  setup-device.ps1  setup-device.py  setup-device.sh  statusline.py  upgrade-project.ps1  upgrade-project.py  upgrade-project.sh
templates/: .env.example  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  DEVELOPER_WORKFLOW.md  Makefile  README.md  features.json  init.sh  progress.md  skills_manifest.txt
templates/python/: pyproject.toml
templates/python/src/{{PACKAGE_NAME}}/: config.py  schemas.py
templates/python/tests/: conftest.py  test_schemas.py  test_smoke.py
tests/: .gitkeep  harness.sh  host-contract-smoke.sh  run-all.sh  test-azg.sh  test-evals.sh  test-fable.sh  test-mutation-verify.sh  test-phase0.sh  test-phase1.sh  test-phase10.sh  test-phase2.sh  test-phase3.sh  test-phase4.sh  test-phase5.sh  test-phase6.sh  test-phase7.sh  test-phase8.sh  test-phase9.sh  test_ci_workflow.py  test_compaction.py  test_harness_bootstrap.py  test_phase1.py  test_scaffold.py  test_scaffold_roundtrip.py  test_setup.py  test_skills.py  test_statusline.py  test_upgrade.py  test_verify_lightweight_teamwork.py  verify_docs.py  verify_lightweight_teamwork.py
(+156 files in other folders)
