[project]
name = "alpha-zero-g"
version = "0.2.0"
description = "Foundational Agentic AI Analytics Harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Data Stack
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "scipy>=1.12.0",
    
    # Visualization Stack
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    
    # Machine Learning & Statistical Models Stack
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "pydantic>=2.7.0",
    "pandera>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ipykernel>=6.29.0",
    "mypy>=1.10.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.setuptools.packages.find]
exclude = ["scratch*", "templates*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
