[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Statistical Analytics Project bootstrapped from Alpha-Zero-G"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Foundation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    
    # Data Layer
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "pandera>=0.20.0",
    
    # Stats / ML
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    
    # Pipeline
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pandas-stubs>=2.2.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pandera.*",
    "polars.*",
    "numpy.*",
    "scipy.*",
    "statsmodels.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
    "optuna.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "tenacity.*",
]
ignore_missing_imports = true
